Fix overflow page

--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@ ul {
 }
 
 .nem {
-  margin: 0 43% 20px 5%;
+  margin: 0 0 20px 5%;
   border-radius: 8px;
   border: none;
   font-size: 15px;
